IconButton: refactor to fix Dropdown positioning shift on rerender + small fix (#1930)
This reverts commit fd0124f7a7e930dd627633d3f00f523ee0fba976.

--- a/packages/gestalt/src/IconButton.css
+++ b/packages/gestalt/src/IconButton.css
@@ -5,6 +5,15 @@
   background: transparent;
 }
 
+.parentButton {
+  composes: noBorder from "./Borders.css";
+  composes: p0 from "./Whitespace.css";
+  composes: paddingX0 from "./boxWhitespace.css";
+  composes: paddingY0 from "./boxWhitespace.css";
+  composes: transparentBg from "./Colors.css";
+}
+
+.parentButton:focus,
 .button:focus {
   outline: 0;
 }
